--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,1 +1,23 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Home</title>
+  </head>
+    <div>
+      <ul>
+        <li>
+          <a href='/'>Home</a>
+        </li>
+        <li>
+          <a href='/about'>About</a>
+        </li>
+        <li>
+          <a href='/content'>Content</a>
+        </li>
+      </ul>
+    </div>
+  <body>
+
+  </body>
+</html>
