added navigation links to about page

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -1,1 +1,22 @@
-about page
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>About Me</title>
+  </head>
+
+  <body>
+    <div>
+      <ul>
+        <li>
+          <a href='/'>Home</a>
+        </li>
+        <li>
+          <a href='/about'>About</a>
+        </li>
+        <li>
+          <a href='/content'>Content</a>
+        </li>
+      </ul>
+    </div>
+  </body>
+</html>
