--- a/public/html/content.html
+++ b/public/html/content.html
@@ -1,1 +1,22 @@
-content page
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Content</title>
+  </head>
+
+  <body>
+    <div class="">
+      <ul>
+        <li>
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <a href="/about">About</a>
+        </li>
+        <li>
+          <a href="/content">Content</a>
+        </li>
+      </ul>
+    </div>
+  </body>
+</html>
