added in comments

--- a/public/html/content.html
+++ b/public/html/content.html
@@ -17,6 +17,7 @@
           <a href="/content">Content</a>
         </li>
       </ul>
+      <!--End of navigation-->
     </div>
   </body>
 </html>
