finished up main.css page and added css style to about page

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,15 +4,15 @@
     <title>Home</title>
     <link rel="stylesheet" href="/css/main.css">
   </head>
-    <div>
+    <div id='navigation'>
       <ul>
-        <li>
+        <li class='btn'>
           <a href='/'>Home</a>
         </li>
-        <li>
+        <li class='btn'>
           <a href='/about'>About</a>
         </li>
-        <li>
+        <li class='btn'>
           <a href='/content'>Content</a>
         </li>
       </ul>
