--- a/public/html/about.html
+++ b/public/html/about.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <title>About Me</title>
+    <link rel="stylesheet" href="/css/main.css">
   </head>
 
   <body>
-    <div>
+    <div id="navigation">
       <ul>
         <li>
           <a href='/'>Home</a>
