added ccs style to content page

--- a/public/html/content.html
+++ b/public/html/content.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <title>Content</title>
+    <link rel="stylesheet" href="/css/main.css">
   </head>
 
   <body>
-    <div class="">
+    <div id="navigation">
       <ul>
         <li>
           <a href="/">Home</a>
