--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,6 +4,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="/css/main.css">
   </head>
+  <body>
     <div id='navigation'>
       <ul>
         <li class='btn'>
@@ -16,9 +17,21 @@
           <a href='/content'>Content</a>
         </li>
       </ul>
-      <!--End of navigation-->
     </div>
-  <body>
-
+      <!--End of navigation-->
+    <div>
+      <h1>Placeholder heading</h1>
+    </div>
+    <!--End of header-->
+    <div>
+      <p>
+        This is where my misson statement will go once I have on to write out. Praesent ut quam nulla. Nunc vel cursus quam, eget feugiat arcu. Nulla facilisi. Proin eleifend orci orci, vel mollis purus sodales sollicitudin. Fusce euismod lacus sit amet tortor vulputate, sed dictum elit tincidunt. Aenean egestas est eget lacus molestie convallis. Vivamus vestibulum faucibus ligula et ultrices. Suspendisse maximus nisl vitae fermentum interdum.
+      </p>
+    </div>
+    <!--End of Misson Statement-->
+    <div>
+      <img src="http://placehold.it/400x500" alt="welcoming picture" />
+    </div>
+    <!--End of Picture-->
   </body>
 </html>
