basic layout of about page

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -4,7 +4,6 @@
     <title>About Me</title>
     <link rel="stylesheet" href="/css/main.css">
   </head>
-
   <body>
     <div id="navigation">
       <ul>
@@ -20,5 +19,26 @@
       </ul>
       <!--End of navigation-->
     </div>
+    <div id='header'>
+      <h1>About me and contact info</h1>
+    </div>
+    <div>
+      <img src="http://placehold.it/350x150" alt="picture of me" />
+    </div>
+    <!--End of Picture-->
+    <div>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis luctus dolor vitae eros volutpat volutpat. Mauris nunc tortor, faucibus non libero fermentum, aliquet faucibus mauris. Morbi et volutpat tellus. Proin rutrum lacinia vestibulum. Curabitur eget tincidunt nisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque ornare volutpat nisi, et convallis ex placerat ut. Nullam vulputate fringilla nisi et porttitor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia turpis in tortor rhoncus, et luctus dui posuere. Pellentesque mattis nulla a est ultricies tincidunt.
+      </p>
+      <p>
+        Nunc non arcu non diam facilisis interdum in sed risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec in neque vel sapien dignissim hendrerit. Fusce ultricies turpis non felis maximus venenatis. Duis id lectus felis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec in egestas mi, id maximus quam. Maecenas vulputate molestie mi, in tempor mi venenatis eu. Maecenas rhoncus sed mauris eu convallis. In ac hendrerit lorem. Nullam volutpat risus et elit congue, ac vehicula lorem dignissim. Nunc consequat laoreet enim, nec tempus orci sollicitudin porta. Vivamus at risus commodo, gravida nulla sit amet, viverra metus.
+      </p>
+    </div>
+    <!--End of About Me-->
+    <br>
+    <div>
+      <p>contact information like email and what not.</p>
+    </div>
+    <!--End of Contact Info-->
   </body>
 </html>
