basic content page layout added

--- a/public/html/content.html
+++ b/public/html/content.html
@@ -4,7 +4,6 @@
     <title>Content</title>
     <link rel="stylesheet" href="/css/main.css">
   </head>
-
   <body>
     <div id="navigation">
       <ul>
@@ -20,5 +19,55 @@
       </ul>
       <!--End of navigation-->
     </div>
+    <div id='header'>
+      <h1>Projects</h1>
+    </div>
+    <!--End of Header-->
+    <div>
+      <ul>
+        <li>
+          Portfolio Website
+        </li>
+        <li>
+          project 2
+        </li>
+        <li>
+          project 3
+        </li>
+      </ul>
+    </div>
+    <!--End of complete projects list-->
+    <div>
+      <ul>
+        <li>
+          project 4
+        </li>
+        <li>
+          project 5
+        </li>
+        <li>
+          project 6
+        </li>
+      </ul>
+    </div>
+    <!--End of unfinished projects list-->
+    <div>
+      <h4>software and services used</h4>
+        <ul>
+          <li>
+            <a href="https://github.com/Andrewday40">My Github Profile</a>
+          </li>
+          <li>
+            <a href="https://atom.io/">atom.io</a>
+          </li>
+        </ul>
+      <h4>Languages</h4>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Javascript</li>
+      </ul>
+    </div>
+    <!--software and technology I use, including links-->
   </body>
 </html>
