added colemns to content page and new colemn addition to css page

--- a/public/html/content.html
+++ b/public/html/content.html
@@ -23,34 +23,36 @@
       <h1>Projects</h1>
     </div>
     <!--End of Header-->
-    <div>
-      <ul>
-        <li>
-          Portfolio Website
-        </li>
-        <li>
-          project 2
-        </li>
-        <li>
-          project 3
-        </li>
-      </ul>
+    <div id='projectwrap'>
+      <div id='project1'>
+        <ul>
+          <li>
+            Portfolio Website
+          </li>
+          <li>
+            project 2
+          </li>
+          <li>
+            project 3
+          </li>
+        </ul>
+      </div>
+      <!--End of complete projects list-->
+      <div id='project2'>
+        <ul>
+          <li>
+            project 4
+          </li>
+          <li>
+            project 5
+          </li>
+          <li>
+            project 6
+          </li>
+        </ul>
+      </div>
+      <!--End of unfinished projects list-->
     </div>
-    <!--End of complete projects list-->
-    <div>
-      <ul>
-        <li>
-          project 4
-        </li>
-        <li>
-          project 5
-        </li>
-        <li>
-          project 6
-        </li>
-      </ul>
-    </div>
-    <!--End of unfinished projects list-->
     <div>
       <h4>software and services used</h4>
         <ul>
