--- a/public/html/about.html
+++ b/public/html/about.html
@@ -40,5 +40,21 @@
       <p>contact information like email and what not.</p>
     </div>
     <!--End of Contact Info-->
+    <div>
+      <form action="/about" method="POST">
+        <h3>Contact Me</h3>
+        <label for="name">Name:</label>
+        <input type="text" name="name" required>
+        <br>
+        <label for="email">Email:</label>
+        <input type="email" name="email" required>
+        <br>
+        <label for="message">Message:</label>
+        <textarea name="message" rows="10" cols="30" required></textarea>
+        <br>
+        <button type="submit">Send</button>
+      </form>
+    </div>
+    <!--End of Contact Form-->
   </body>
 </html>
